--- a/assets/css/register.css
+++ b/assets/css/register.css
@@ -1,5 +1,5 @@
 html,
-body{
+body {
     padding: 0;
     margin: 0;
     height: 100%;
@@ -83,6 +83,7 @@ body{
     color: #a0a0a0;
     font-size: 13px;
     margin-top: 15px;
+    display: block;
 }
 
 #inputContainer button{
@@ -98,7 +99,7 @@ body{
     width: 100%;
 }
 
-#inputContainer button:hover{
+#inputContainer button:hover {
     cursor: pointer;
 }
 
@@ -109,10 +110,45 @@ body{
 .hasAccountText span {
     font-weight: bold;
     font-size: 12px;
-    margin: 0 auto
+    margin: 0 auto;
+    cursor: pointer;
 }
 
 #registerForm,
 #loginForm {
     display: none;
+}
+
+#loginText {
+    padding: 45px;
+    display: table-cell;
+}
+
+#loginText h1 {
+    color: #07d159;
+    font-size: 60px;
+    font-weight: bold;
+    margin-top: 0;
+}
+
+#loginText h2 {
+    margin: 35px 0;
+}
+
+#loginText ul {
+    padding: 0;
+    list-style-image: url("../images/icons/checkmark.png");
+}
+
+#loginText ul li {
+    font-size: 20px;
+    list-style-type: none;
+    padding: 5px;
+    margin-left: 45px;
+}
+
+#inputContainer .errorMessage {
+    color: #07d159;
+    font-size: 12px;
+    display: block;
 }
